Added the app.js and style.css

--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <title>team_start</title>
+        <link rel="stylesheet" href="style.css" />
+    </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>team_start</title>
-</head>
-
-<body>
-    <div>
-        <h1>Welcome!! Lets move on</h1>
-        <p></p>
-    </div>
-</body>
-
+    <body>
+        <div>
+            <h1>Welcome!! Lets move on</h1>
+        </div>
+        <script src="app.js"></script>
+    </body>
 </html>
