added comments and added more contents to the html of the page and changed the margin of the nav-links class in css

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <meta charset="utf-8">
     </head>
     <body>
+        <!-- Start Navigation Bar -->
         <header>
             <div class="container">
                 <a class="logo" href="#">
@@ -25,19 +26,123 @@
                 </nav>
             </div>
         </header>
+        <!-- End Navigation Bar -->
+
+        <!-- Start Main Content -->
         <main>
-            <div class="how-it-works"></div>
-            <div class="clients"></div>
-            <div class="projects">
-                <div class="slack-logo"></div>
-                <div class="facebook-logo"></div>
-                <div class="tesla-logo"></div>
-                <div class="twitter logo"></div>
-                <div class="google logo"></div>
-                <div class="netflix-logo"></div>
+
+            <!-- Start Section "Hire the best remote dev..." -->
+            <div class="hero">
+                <div class="search">
+                    <h1>Hire the best remote developers across Nigeria</h1>
+                    <p>Get your projects completed in no time by capable hands</p>
+                    <input type="text" placeholder="What skills are you looking for?" class="search-bar">
+                    <a href="#"><button type="button" class="btn-large">Find Developers</button></a>
+                </div>
             </div>
-            <div class="what-are-you-waiting-for"></div>
+            <!-- End Section "Hire the best remote dev..." -->
+
+            <!-- Start Section "How it works" -->
+            <div class="how-it-works">
+                <div>
+                    <h2>How it works</h2>
+                    <p>Four easy steps to complete your project</p>
+                </div>
+
+                <!-- Start Icon Tabs -->
+                <div>
+                    <div class="search-icon-tab">
+                        <div class="search-icon"></div>
+                        <h3>Search for developers</h3>
+                        <p>Search for the developer of your choice based on the skillsets you want</p>
+                    </div>
+                    <div class="create-icon-tab">
+                        <div class="create-icon"></div>
+                        <h3>Create project</h3>
+                        <p>Create a project from your dashboard and share with a developer</p>
+                    </div>
+                    <div class="payment-icon-tab">
+                            <div class="payment-icon"></div>
+                            <h3>Make payment</h3>
+                            <p>After developer accepts project proceed to make payment</p>
+                    </div>
+                    <div class="build-icon-tab">
+                            <div class="build-icon"></div>
+                            <h3>Build Project</h3>
+                            <p>Get in touch with the developer and sit tight while you get updates</p>
+                    </div>
+                </div>
+                <!-- End Icon Tabs -->
+
+            </div>
+            <!-- End Section "How it works" -->
+
+            <!-- Start Section "Clients" -->
+            <div class="clients">
+                <div>
+                    <h2>What our clients say</h2>
+                    <p>When we promise, we deliver</p>
+                </div>
+
+                <!-- Start quotes -->
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur maiores maxime magni molestiae necessitatibus! Veritatis, quos? Modi similique ut delectus vitae. Numquam facilis, culpa qui maxime voluptate rerum in totam!</p>
+                <div>
+                    <div><img src="#"></div>
+                    <div>
+                        <p class="client-name">Elon Musk</p>
+                        <p class="client-title">CEO, TESLA</p>
+                    </div>
+                </div>
+                <!-- End quotes -->
+            </div>
+            <!-- End Section "Clients" -->
+
+            <!-- Start Section "Projects" -->
+            <div class="projects">
+                <div><h2>Completed Projects</h2></div>
+                <div>
+                    <div class="slack-logo">
+                        <img src="#">
+                    </div>
+                    <div class="facebook-logo">
+                        <img src="#">
+                    </div>
+                    <div class="tesla-logo">
+                        <img src="#">
+                    </div>
+                    <div class="twitter logo">
+                        <img src="#">
+                    </div>
+                    <div class="google logo">
+                        <img src="#">
+                    </div>
+                    <div class="netflix-logo">
+                        <img src="#">
+                    </div>
+                </div>
+            </div>
+            <!-- End Section "Projects" -->
+
+            <!-- Start Section "What are you waiting for?" -->
+            <div class="what-are-you-waiting-for">
+                <div>
+                    <h2>What are you waiting for?</h2>
+                    <p>Let's help you bring your dream to life</p>
+                </div>
+                <div>
+                    <input>
+                    <div>
+                        <a href="#"><button type="button">Register as Developer</button></a>
+                        or
+                        <a href="#"><button>Find Developers</button></a>
+                    </div>
+                </div>
+            </div>
+            <!-- End Section "What are you waiting for?" -->
         </main>
+        <!-- End Main Content -->
+
+        <!-- Start Footer -->
         <footer class="footer">
             <div>
                 &copy; 2019 <strong>RemDev</strong>
@@ -48,6 +153,7 @@
                 <i data-feather="github" class="social"></i> 
             </div>
         </footer>
+        <!-- End Footer -->
         
     </body>
     <script>
