added more styling, especially to the buttons and first section (hire the best remote dev...)

--- a/index.html
+++ b/index.html
@@ -36,8 +36,17 @@
                 <div class="search">
                     <h1>Hire the best remote developers across Nigeria</h1>
                     <p>Get your projects completed in no time by capable hands</p>
-                    <input type="text" placeholder="What skills are you looking for?" class="search-bar">
-                    <a href="#"><button type="button" class="btn-large">Find Developers</button></a>
+                    <input type="text" placeholder="What skills are you looking for?" class="search-bar"><br>
+                    <a href="#"><button type="button" class="btn-large find">Find Developers</button></a>
+                    <!-- <div class="horizontal-rule">
+                        <div><hr></div>
+                        <div><p class="or">Or</p></div>
+                        <div><hr></div>
+                    </div> -->
+                  <a href=#><button type="button" class="btn-large register">Register as a developer</button></a>
+                </div>
+                <div class="vector-file">
+                  <img src="https://res.cloudinary.com/dpkreativ/image/upload/v1567250811/rem-dev%20homepage/software_dev_zh9apf.png">
                 </div>
             </div>
             <!-- End Section "Hire the best remote dev..." -->
@@ -132,9 +141,9 @@
                 <div>
                     <input>
                     <div>
-                        <a href="#"><button type="button">Register as Developer</button></a>
+                        <a href="#"><button type="button" class="btn-medium register">Register as Developer</button></a>
                         or
-                        <a href="#"><button>Find Developers</button></a>
+                        <a href="#"><button type="button" class="btn-medium find">Find Developers</button></a>
                     </div>
                 </div>
             </div>
