more styles to the document, also updated the navigation bar links

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
         <title>RemDev | Home</title>
         <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
-        <script src="https://unpkg.com/feather-icons"></script>
+        <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css" type="text/css">
+        <script src="https://unpkg.com/feather-icons"></script>
         <meta charset="utf-8">
     </head>
     <body>
@@ -17,9 +18,8 @@
                 </a>
                 <nav>
                     <ul class="nav-links">
-                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Browse Developers</a></li>
                         <li><a href="#">About Us</a></li>
-                        <li><a href="#">Developers</a></li>
                         <li><a href="#">Login</a></li>
                         <li><a href="#"><button type="button" class="btn-small">Sign Up</button></a></li>
                     </ul>
@@ -34,15 +34,15 @@
             <!-- Start Section "Hire the best remote dev..." -->
             <div class="hero">
                 <div class="search">
-                    <h1>Hire the best remote developers across Nigeria</h1>
-                    <p>Get your projects completed in no time by capable hands</p>
+                    <h1 class="hire">Hire the best remote developers across Nigeria</h1>
+                    <p class="hero-offer">Get your projects completed in no time by capable hands</p>
                     <input type="text" placeholder="What skills are you looking for?" class="search-bar"><br>
                     <a href="#"><button type="button" class="btn-large find">Find Developers</button></a>
-                    <!-- <div class="horizontal-rule">
+                    <div class="horizontal-rule">
                         <div><hr></div>
                         <div><p class="or">Or</p></div>
                         <div><hr></div>
-                    </div> -->
+                    </div>
                   <a href=#><button type="button" class="btn-large register">Register as a developer</button></a>
                 </div>
                 <div class="vector-file">
@@ -59,7 +59,7 @@
                 </div>
 
                 <!-- Start Icon Tabs -->
-                <div>
+                <div class="icon">
                     <div class="search-icon-tab">
                         <div class="search-icon"></div>
                         <h3>Search for developers</h3>
@@ -139,7 +139,7 @@
                     <p>Let's help you bring your dream to life</p>
                 </div>
                 <div>
-                    <input>
+                    <input type="text" placeholder="What skills are you looking for?" class="search-bar-footer">
                     <div>
                         <a href="#"><button type="button" class="btn-medium register">Register as Developer</button></a>
                         or
