--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="style.css" type="text/css">
         <script src="https://unpkg.com/feather-icons"></script>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <!-- Start Navigation Bar -->
@@ -109,24 +110,24 @@
             <!-- Start Section "Projects" -->
             <div class="projects">
                 <div><h2>Completed Projects</h2></div>
-                <div>
-                    <div class="slack-logo">
-                        <img src="#">
+                <div class="social-logo-box">
+                    <div class="social-logo slack">
+                        <img src="https://res.cloudinary.com/dpkreativ/image/upload/v1567288744/rem-dev%20homepage/iconfinder_306_Slack_logo_4375081_dk8gb4.svg" class="social-logo-image">
                     </div>
-                    <div class="facebook-logo">
-                        <img src="#">
+                    <div class="social-logo facebook">
+                        <img src="https://res.cloudinary.com/dpkreativ/image/upload/v1567288744/rem-dev%20homepage/iconfinder_Popular_Social_Media-01_2329269_p6b57o.svg" class="social-logo-image">
                     </div>
-                    <div class="tesla-logo">
-                        <img src="#">
+                    <div class="social-logo tesla">
+                        <img src="https://res.cloudinary.com/dpkreativ/image/upload/v1567288745/rem-dev%20homepage/580b57fcd9996e24bc43c4a2_cxelax.png" class="social-logo-image">
                     </div>
-                    <div class="twitter logo">
-                        <img src="#">
+                    <div class="social-logo twitter">
+                        <img src="https://res.cloudinary.com/dpkreativ/image/upload/v1567288745/rem-dev%20homepage/iconfinder_twitter_294655_aarbg3.svg" class="social-logo-image">
                     </div>
-                    <div class="google logo">
-                        <img src="#">
+                    <div class="social-logo google">
+                        <img src="https://res.cloudinary.com/dpkreativ/image/upload/v1567288744/rem-dev%20homepage/iconfinder_Google_1298745_sbaroj.svg" class="social-logo-image">
                     </div>
-                    <div class="netflix-logo">
-                        <img src="#">
+                    <div class="social-logo netflix">
+                        <img src="https://res.cloudinary.com/dpkreativ/image/upload/v1567288744/rem-dev%20homepage/iconfinder_227_Netflix_logo_4375011_biar6x.svg" class="social-logo-image">
                     </div>
                 </div>
             </div>
