more stuff on html and css

--- a/index.html
+++ b/index.html
@@ -61,22 +61,22 @@
 
                 <!-- Start Icon Tabs -->
                 <div class="icon">
-                    <div class="search-icon-tab">
-                        <div class="search-icon"></div>
+                    <div class="search-icon-tab i-tab">
+                        <div class="search-icon"><img src="https://res.cloudinary.com/dpkreativ/image/upload/v1567292515/rem-dev%20homepage/iconfinder-icon_txzz4p.svg" class="svg-icon"></div>
                         <h3>Search for developers</h3>
                         <p>Search for the developer of your choice based on the skillsets you want</p>
                     </div>
-                    <div class="create-icon-tab">
+                    <div class="create-icon-tab i-tab">
                         <div class="create-icon"></div>
                         <h3>Create project</h3>
                         <p>Create a project from your dashboard and share with a developer</p>
                     </div>
-                    <div class="payment-icon-tab">
+                    <div class="payment-icon-tab i-tab">
                             <div class="payment-icon"></div>
                             <h3>Make payment</h3>
                             <p>After developer accepts project proceed to make payment</p>
                     </div>
-                    <div class="build-icon-tab">
+                    <div class="build-icon-tab i-tab">
                             <div class="build-icon"></div>
                             <h3>Build Project</h3>
                             <p>Get in touch with the developer and sit tight while you get updates</p>
