--- a/dev-page.html
+++ b/dev-page.html
@@ -32,6 +32,9 @@
             float: right;
         }
 
+        .row {
+            display: grid;
+        }
 
     </style>
 </head>
@@ -52,7 +55,7 @@
     <section>
         <div>
                 <h1>Hire the best remote</h1>
-                <h1>developers across nigeria</h1>
+                <h1>developers across Nigeria</h1>
                 <h4>Get your projects completed in no time by capable hands</h4>
                 <input type="text" placeholder="what skills are you looking for?">
                 <br>
