updated the navbar

--- a/index.html
+++ b/index.html
@@ -5,22 +5,32 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <title>team_start</title>
+        <link
+            href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,400i,700,900&display=swap"
+            rel="stylesheet"
+        />
         <link rel="stylesheet" href="style.css" />
     </head>
 
     <body>
         <div class="landing-page">
             <nav class="landing-nav">
-                <ul class="landing-ul">
-                    <li class="landing-li"><a href="#">RemDev</a></li>
-                    <li class="landing-li"><a href="#">Home</a></li>
-                    <li class="landing-li"><a href="#">About Us</a></li>
-                    <li class="landing-li"><a href="#">Developers</a></li>
-                    <li class="landing-li"><a href="#">Login</a></li>
-                    <li class="landing-li"><a href="#">Sign Up</a></li>
-                </ul>
+                <div class="landing-logo">
+                    <h3>RemDev</h3>
+                </div>
+                <div class="landing-right">
+                    <ul class="landing-ul">
+                        <li class="landing-li">
+                            <a href="#">Browse developers</a>
+                        </li>
+                        <li class="landing-li"><a href="#">About Us</a></li>
+                        <li class="landing-li"><a href="#">Login</a></li>
+                        <li class="landing-li signup">
+                            <a href="#">Sign Up</a>
+                        </li>
+                    </ul>
+                </div>
             </nav>
-            <br />
             <hr />
             <section>
                 <div class="landing-page_primary">
