--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>team_start</title>
         <link
             href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,400i,700,900&display=swap"
-            rel="stylesheet"
+            rel="stylesheet">
       
         <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -23,7 +23,7 @@
                 <div class="landing-right">
                     <ul class="landing-ul">
                         <li class="landing-li">
-                            <a href="#">Browse developers</a>
+                            <a href="./search.html">Browse developers</a>
                         </li>
                         <li class="landing-li"><a href="#">About Us</a></li>
                         <li class="landing-li"><a href="#">Login</a></li>
