--- a/index.html
+++ b/index.html
@@ -181,6 +181,11 @@
                 <a style="float:right" href="twitter.com">twitter</a>
             </footer>
         </div>
+        //form of pay botton 
+        
+        <form style="text-align: center; padding-top: 80px;">
+  <button type="button" style="cursor:pointer;" value="Pay Now" id="submit">Pay Now</button>
+</form>
         <script src="app.js"></script>
     </body>
 </html>
