added the developers section

--- a/search.html
+++ b/search.html
@@ -45,6 +45,13 @@
                 </div>
             </div>
         </section>
+        <section class="developers-section">
+            <div class="developers">
+                <div class="developers-filter"></div>
+                <div class="developers-details"></div>
+                <div class="developers-signup"></div>
+            </div>
+        </section>
     </div>
 </body>
 
