Link sign up page to landing page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link
             href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,400i,700,900&display=swap"
             rel="stylesheet">
-      
+
         <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="style.css" />
@@ -28,7 +28,7 @@
                         <li class="landing-li"><a href="#">About Us</a></li>
                         <li class="landing-li"><a href="#">Login</a></li>
                         <li class="landing-li signup">
-                            <a href="#">Sign Up</a>
+                            <a href="signup.html">Sign Up</a>
                         </li>
                     </ul>
                 </div>
@@ -192,8 +192,8 @@
                 <a style="float:right" href="twitter.com">twitter</a>
             </footer>
         </div>
-        //form of pay botton 
-        
+        //form of pay botton
+
         <form style="text-align: center; padding-top: 80px;">
   <button type="button" style="cursor:pointer;" value="Pay Now" id="submit">Pay Now</button>
 </form>
