Add landing page link to signup page

--- a/signup.html
+++ b/signup.html
@@ -14,7 +14,7 @@
     <nav class="mainzone">
         <ul class="mainnav">
             <li class="link increasefont" href="">RemDev</li>
-            <li class="push sourcefont"><a class="link" href="">Home</a></li>
+            <li class="push sourcefont"><a class="link" href="index.html">Home</a></li>
             <li class="sourcefont"><a class="link" href="dev-page.html">Browse developers</a></li>
             <li class="pushleft sourcefont"><a class="link" href="">About Us</a></li>
 
