Link pages together

--- a/search.html
+++ b/search.html
@@ -18,7 +18,7 @@
     <div class="search-page">
         <nav class="search-nav">
             <div class="search-logo">
-                <h3>RemDev</h3>
+                <h3><a href="index.html">RemDev</a></h3>
             </div>
             <div class="search-right">
                 <ul class="search-ul">
@@ -28,7 +28,7 @@
                     <li class="search-li"><a href="#">About Us</a></li>
                     <li class="search-li"><a href="#">Login</a></li>
                     <li class="search-li signup">
-                        <a href="#">Sign Up</a>
+                        <a href="signup.html">Sign Up</a>
                     </li>
                 </ul>
             </div>
