--- a/signup.html
+++ b/signup.html
@@ -13,7 +13,7 @@
 <body>
     <nav class="mainzone">
         <ul class="mainnav">
-            <li class="link increasefont" href="">RemDev</li>
+            <li class="link increasefont" href="index.html">RemDev</li>
             <li class="push sourcefont"><a class="link" href="index.html">Home</a></li>
             <li class="sourcefont"><a class="link" href="dev-page.html">Browse developers</a></li>
             <li class="pushleft sourcefont"><a class="link" href="">About Us</a></li>
