I made corrections to navbar links and made site logo uniform for all pages

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>team_start</title>
+  <title>RemDev | Home</title>
+  <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,400i,700,900&display=swap"
     rel="stylesheet">
 
@@ -18,12 +19,12 @@
   <div class="landing-page">
     <nav class="landing-nav">
       <div class="landing-logo">
-        <h3>RemDev</h3>
+        <h3><a class="increasefont" href="index.html">RemDev</a></h3>
       </div>
       <div class="landing-right">
-        <ul class="landing-ul">
+        <ul class="landing-ul"> 
           <li class="landing-li">
-            <a href="./search.html">Browse developers</a>
+            <a href="search.html">Browse developers</a>
           </li>
           <li class="landing-li"><a href="#">About Us</a></li>
           <li class="landing-li"><a href="#">Login</a></li>
@@ -205,10 +206,10 @@
     <hr />
     <footer>
       &copy; 2019 RemDev
-      <a style="float:right" href="twitter.com">twitter</a>
+      <a style="float:right" href="twitter.com">Twitter</a>
     </footer>
   </div>
-  //form of pay botton
+  <!-- form of pay botton -->
 
   <form style="text-align: center; padding-top: 80px;">
     <button type="button" style="cursor:pointer;" value="Pay Now" id="submit">Pay Now</button>
