--- a/signup.html
+++ b/signup.html
@@ -13,9 +13,9 @@
 <body>
     <nav class="mainzone">
         <ul class="mainnav">
-            <li class="link increasefont" href="index.html">RemDev</li>
+            <li><a class="link increasefont"href="index.html">RemDev</a></li>
             <li class="push sourcefont"><a class="link" href="index.html">Home</a></li>
-            <li class="sourcefont"><a class="link" href="dev-page.html">Browse developers</a></li>
+            <li class="sourcefont"><a class="link" href="search.html">Browse developers</a></li>
             <li class="pushleft sourcefont"><a class="link" href="">About Us</a></li>
 
         </ul>
