--- a/dev-page.html
+++ b/dev-page.html
@@ -39,8 +39,8 @@
 
     <nav>
         <ul>
-            <li><a href=""></a>RemDev</a></li>
-            <li><a href="remdev.co">Home</a></li>
+            <li><a href="index.html"></a>RemDev</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="aboutus.html">About Us</a></li>
             <li><a href="developers.html">Developers</a></li>
             <li><a href="login.html">Login</a></li>
