--- a/index.html
+++ b/index.html
@@ -13,6 +13,46 @@
   <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="style.css" />
+  //script of payment 
+
+<script type="text/javascript" src="https://ravesandboxapi.flutterwave.com/flwv3-pug/getpaidx/api/flwpbf-inline.js"></script>
+<script>
+     document.addEventListener("DOMContentLoaded", function(event) {
+  document.getElementById("submit").addEventListener("click", function(e) {
+    var PBFKey = "FLWPUBK_TEST-37e54c054ec9f100d1c50e255426ee76-X";
+    
+    getpaidSetup({
+      PBFPubKey: PBFKey,
+      customer_email: "user@example.com",
+      customer_firstname: "Temi",
+      customer_lastname: "Adelewa",
+      custom_description: "Pay Internet",
+      custom_logo: "http://localhost/communique-3/skin/frontend/ultimo/communique/custom/images/logo.svg",
+      custom_title: "Communique Global System",
+      amount: 2000,
+      customer_phone: "234099940409",
+      country: "NG",
+      currency: "NGN",
+      txref: "rave-123456",
+      integrity_hash: "6800d2dcbb7a91f5f9556e1b5820096d3d74ed4560343fc89b03a42701da4f30",
+      onclose: function() {},
+      callback: function(response) {
+        var flw_ref = response.tx.flwRef; // collect flwRef returned and pass to a                  server page to complete status check.
+        console.log("This is the response returned after a charge", response);
+        if (
+          response.tx.chargeResponseCode == "00" ||
+          response.tx.chargeResponseCode == "0"
+        ) {
+          // redirect to a success page
+        } else {
+          // redirect to a failure page.
+        }
+      }
+    });
+  });
+});
+</script>
+
 </head>
 
 <body>
