--- a/about.html
+++ b/about.html
@@ -5,12 +5,50 @@
 	<meta name="description" content ="">
 	<meta name="author" content = "">
 	<meta name ="viewport" content = "width=device-width, initial-scale=1, maximum-scale=1">
+	<link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
+
+
 	<style type="text/css">
 
 	body{
-		background-color: #2B577A;
-		padding: 5rem 1rem;
-		color:#ffffff;
+		background-color: #001F3F;
+		padding:0 5rem 1rem;
+		color:#ffffff;	
+	}
+
+	.mainnav {
+    display: flex;
+    list-style: none;
+    margin: 0;
+	}
+	.mainnav li {
+    padding: 20px;
+	}
+	.link {
+    color: white;
+    text-decoration: none;
+	}
+	.increasefont {
+    font-size: 35px;
+    font-family: 'Pacifico', cursive;
+
+	}
+	.push {
+    margin-left: auto;
+	}
+
+	.pushleft {
+	    padding-right: 50px;
+	}
+
+	.sourcefont {
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 17px;
+    line-height: 25px;
+	}
+
+
+	.content{
 		display: flex;
 		justify-content:center;
 	}
@@ -41,25 +79,37 @@
 	</style>	
 </head>
 <body>
-	<div class="container">
-		<section id="about">
-			<h3>About Us</h3>
-			<p>RemDev is a platform that allows software developers connect with clients and vice versa. 
-				Through RemDev individuals and business connect with freelance software developers to work on projects. RemDev makes the job faster, easier and cost-effective to find, hire and work with the best software developers anywhere in the world</p>
-		</section>
-		<section id="vision">
-			<h3>Vision</h3>
-			<p>To connect individuals and business with the best software developers without boundaries</p>
-		</section>
-		<section id="mission">
-			<h3>Mission</h3>
-			<p>To create opportunities for the best hands in software development, so that they can afford to live the good life</p>
-		</section>
-		<section id="values">
-			<h3>Values</h3>
-			<p>Commitment (Put a design above this and the other values too). We are committed to making a positive difference in our client's lives. Teamwork: We work together across boundaries to meet the needs of our clients whilst helping our company grow. Passion: We are passionate and always ready to get the job done!</p>
-		</section>
-		<a class="team-link" href="team.html">Meet our team</a>
+	
+		<nav class="mainzone">
+	        <ul class="mainnav">
+	            <li><a class="link increasefont"href="index.html">RemDev</a></li>
+	            <li class="push sourcefont"><a class="link" href="index.html">Home</a></li>
+	            <li class="sourcefont"><a class="link" href="search.html">Browse developers</a></li>
+	            <li class="pushleft sourcefont"><a class="link" href="#">About Us</a></li>
+
+	        </ul>
+	    </nav>
+	    <div class="content">
+		<div class="container">
+			<section id="about">
+				<h3>About Us</h3>
+				<p>RemDev is a platform that allows software developers connect with clients and vice versa. 
+					Through RemDev individuals and business connect with freelance software developers to work on projects. RemDev makes the job faster, easier and cost-effective to find, hire and work with the best software developers anywhere in the world</p>
+			</section>
+			<section id="vision">
+				<h3>Vision</h3>
+				<p>To connect individuals and business with the best software developers without boundaries</p>
+			</section>
+			<section id="mission">
+				<h3>Mission</h3>
+				<p>To create opportunities for the best hands in software development, so that they can afford to live the good life</p>
+			</section>
+			<section id="values">
+				<h3>Values</h3>
+				<p>Commitment (Put a design above this and the other values too). We are committed to making a positive difference in our client's lives. Teamwork: We work together across boundaries to meet the needs of our clients whilst helping our company grow. Passion: We are passionate and always ready to get the job done!</p>
+			</section>
+			<a class="team-link" href="team.html">Meet our team</a>
+		</div>
 	</div>
 </body>
 </html>
