--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <div class="landing-page">
     <nav class="landing-nav">
-      <div class="landing-logo">
+      <div>
         <h3><a class="increasefont" href="index.html">RemDev</a></h3>
       </div>
       <div class="landing-right">
